<resources>
    <string name="app_name">Smack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="please_log_in">Please Log in</string>
    <string name="message">Message</string>
    <string name="to_send_message">to send message</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="create_a_user_avater">Create a User Avater</string>
    <string name="select_an_avater">select an avater</string>
    <string name="generate_background_color">Generate Background Color</string>
    <string name="create_user">Create User</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
</resources>
